(bitcoin) grid control classes to fix field alignment

--- a/share/spice/bitcoin/bitcoin.css
+++ b/share/spice/bitcoin/bitcoin.css
@@ -5,7 +5,7 @@
 .zci--bitcoin .bitcoin__blk {
     vertical-align: top;
     padding: 1em 7%;
-    margin: 0.25em;
+    margin: 0.25em 0;
     background-color: #E9E9E9;
     background-color: rgba(150,150,150,0.1);
     border-radius: 3px;
@@ -31,12 +31,18 @@
 }
 
 .zci--bitcoin .zci__body {
-    width: 99%;
     padding-left: 0;
 }
 
 @media screen and (max-width: 680px) {
-    .zci--bitcoin .bitcoin__blk {
+	.zci--bitcoin .bitcoin {
+		margin-left: -0.5em;
+		margin-right: 0.5em;
+	}
+	.zci--bitcoin .bitcoin__wdt {
+		padding-left: 0.5em;
+	}
+	.zci--bitcoin .bitcoin__blk {
 		line-height: 24px;
 	}
 	.zci--bitcoin .bitcoin__price {
